# ship-route-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ship_routing/data_pipeline/: loader.py
src/ship_routing/engine/: astar.py  astar__c.py  physics.py
src/ship_routing/models/: envir.py  train.py
tests/: comaprison.py  metrcies.py  test_astar.py  test_data_loader.py  test_env.py
