[tool.poetry]
name = "ship-routing"
version = "0.1.0"
description = "Ship Route Optimization using Deep Reinforcement Learning"
authors = ["Vaibhav Tripathi <vaibhavtripathi2020@gmail.com>"]
readme = "README.md"
packages = [{include = "ship_routing", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.2"
xarray = "^2024.1" 
netcdf4 = "^1.6"
scipy = "^1.12"
torch = "^2.2"
gymnasium = "^0.29"

uvicorn = "^0.27"
shimmy = "<2.0.0"
stable-baselines3 = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"      
ruff = "^0.3"        
black = "^24.2"      
jupyter = "^1.0"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]